# ELSA

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
CLAPSep/: README.md
CLAPSep/model/: CLAPSep_decoder.py
notebooks/: create_sankey_diagram.py  event_stats.ipynb  sens_analysis_plot.ipynb
scripts/: download.sh  feature_viewer.py
src/: dataset.py  main.py  model.py  oneshot.py  preprocess.py  si_sdr.py
src/AudioSep/: pipeline.py  utils.py
src/AudioSep/models/: audiosep.py  clap_encoder.py  resunet.py
src/AudioSep/models/CLAP/open_clip/: factory.py  model.py
src/AudioSep/models/CLAP/training/: data.py
src/CLAPSep/: app.py
src/CLAPSep/model/: CLAPSep.py  CLAPSep_decoder.py
src/SoloAudio/: solo_audio_ins.py
src/SoloAudio/model/: attention.py  rotary.py  udit.py
src/SoloAudio/vae_modules/stable_vae/: __init__.py
src/SoloAudio/vae_modules/stable_vae/models/: autoencoders.py
src/audio_bert_score/: ast_models.py  audiobertscore.py
src/fd_openl3/: openl3_fd.py
src/kl_div_passt/: passt_kld.py
src/sam-audio/eval/: main.py
src/sam-audio/eval/metrics/: clap.py
src/sam-audio/examples/: span_prompting.ipynb
src/sam-audio/sam_audio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sam-audio/sam_audio/model/: config.py  model.py
src/utils/: eval_methods.py  helper_func.py  lb_output.py
