[project]
name = "ttaeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.1"
dependencies = [
    "matplotlib>=3.10.7",
    "msclap>=1.3.4",
    "pandas>=2.3.3",
    "ruff>=0.14.9",
    "torch>=2.7.0",
    "torchaudio==2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
    "laion-clap>=1.1.6",
    "torchcodec==0.5",
    "xformers",
    "numpy>=1.26.4",
    "openl3",
    "pyloudnorm>=0.2.0",
    "hear21passt>=0.0.26",
    "frechet-audio-distance>=0.3.3",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
xformers = [{ index = "pytorch-cu118" }]
openl3 = { git = "https://github.com/marl/openl3.git" }

[[tool.uv.index]]
name     = "pytorch-cu118"
url      = "https://download.pytorch.org/whl/cu118"
explicit = true
